Drop apache commens-io usage as it's not needed to be used.